web/src/components/Common/Note/Note.scss
/* Copyright (C) 2019, 2020 Monomax Software Pty Ltd
 *
 * This file is part of Dnote.
 *
 * Dnote is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Dnote is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Dnote.  If not, see <https://www.gnu.org/licenses/>.
 */

@import '../../App/responsive';
@import '../../App/theme';
@import '../../App/rem';
@import '../../App/font';

.frame {
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
  background: white;

  &.collapsed {
    .book-label {
      // control the coloro of ellipsis when overflown
      color: $light-gray;
    }

    .book-label a {
      color: $light-gray;
    }
  }
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: rem(12px) rem(16px);
  border-bottom: 1px solid $border-color;
}
.header-left,
.header-right {
  display: flex;
  align-items: center;
}

.book-icon {
  vertical-align: middle;
}

.content-wrapper {
  padding: rem(12px) rem(16px);
}

.content {
  word-wrap: break-word;
  word-break: break-all;
}

.collapsed-content {
  color: $light-gray;
}

.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  @include font-size('small');
  padding: rem(12px) rem(16px);
}

.ts {
  color: $light-gray;
}

.match {
  display: inline-block;
  background: #f7f77d;
}

.book-label {
  @include font-size('medium');
  font-weight: 600;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: $black;

  a {
    color: inherit;

    &:hover {
      color: inherit;
    }
  }
}

